[package]
name = "rpg_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
dotenv = "0.15.0"
futures = "0.3.31"
libsql = "0.9.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "net", "sync"] }
uuid = { version = "1.17.0", features = ["v4"] }

